src/components/pre-playback-play-overlay/_pre-playback-play-overlay.scss
.pre-playback-play-overlay {
  position: absolute;
  top: 0; left: 0;
  width: 100%; height: 100%;
  z-index: 10;

  .pre-playback-play-button {
    position: absolute;
    top: 50%; left: 50%;
    height: 108px; width: 108px;
    border: 2px solid rgba(255,255,255,0.2);
    background-color: rgba(0,0,0,0.5);
    margin: -54px 0 0 -54px;
    border-radius: 54px;
    fill: #fff;
    padding: 20px;
    cursor: pointer;

    &:hover {
      border: 2px solid rgba(255,255,255,0.4);
    }
    &:active {
      opacity: 0.7;
      transform: scale(1);
    }
  }
}

.pre-playback .player-gui {
  opacity: 0 !important;
}

